syntax = 'proto3';

option java_multiple_files = true;
option java_package = 'billing';

service BillingService {
  rpc CreateBillingAccount (BillingRequest) returns (BillingResponse);
  rpc Add (AddParams) returns (AddResponse);
}

message BillingRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse {
  string accountId = 1;
  string status = 2;
}

message AddParams {
  double a = 1;
  double b = 2;
}

message AddResponse {
  double result = 1;
}
